# $Id$

2008-09-04	Konstantin V. Arkhipov

	* main/Base/ImageType.class.php: progressive jpeg type added, patch
	submitted by Konstantin Scheglov <k.s.scheglov@gmail.com>.

2008-09-02	Denis M. Gabaidulin

	* main/Utils/DateUtils: makeFirstDayOfMonth(), makeLastDayOfMonth() added.

2008-09-02	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveEnumeration.class.php,
	test/core/PrimitiveEnumerationTest.class.php: getList() fixed.

2008-09-01	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: isEqual now behaves just like
	!isNotEqual; isSame and isNotSame were also introduced.

2008-08-30	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php, meta/bin/build.php: classes
	preloading moved to ClassUtils::preloadAllClasses() from meta's
	build script.

	* test/: correct test's skipping added.

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

	* core/Form/Primitives/BasePrimitive.class.php,
	core/Form/Primitives/PrimitiveDomDocument.class.php: getErrorLabel()
	moved down to PrimitiveDomDocument because no one else uses it.

2008-08-28	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
	preserve type for integer values.

	* core/Types/Scalar.class.php: new type introduced.

2008-08-27	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveClass.class.php,
	test/core/PrimitiveClassTest.class.php: of() method and test added.

2008-08-26	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveClass.class.php,
	test/core/PrimitiveClassTest.class.php: new primitive with
	corresponding test introduced.

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-26	Vladlen Y. Koshelev

	* main/Flow/ViewResolverChain.class.php: useful to resolve views using
	different resolvers.

	* main/Flow/ViewResolver.class.php: viewExists added to interface.

2008-08-22	Konstantin V. Arkhipov

	* autoload.wholeClassCache.inc.php: new class cache type introduced