@@ -16,6 +16,7 @@ Evgeny V. Kokovikhin		<dovg@dovg.ru>
 Garmonbozia Research Group	<garmonbozia@shadanakar.org>
 Igor V. Gulyaev			<igor_vg@mail.ru>
 Ivan Y. Khvostishkov		<dedmajor@gmail.com>
+Michael V. Tchervyakov		<htonus@smtp.ru>
 Nickolay G. Korolyov		<nk@bessia.net>
 Sergey M. Skachkov		<myserg@gmail.com>
 Sergey S. Sergeev		<webs.support@gmail.com>
